build_log.txt
To honour the JVM settings for this build a single-use Daemon process will be forked. For more on this, please refer to https://docs.gradle.org/8.7/userguide/gradle_daemon.html#sec:disabling_the_daemon in the Gradle documentation.
Daemon will be stopped at the end of the build 
> Task :cacheVersionManifest1.21.1 UP-TO-DATE
> Task :cacheVersionExecutableClient1.21.1 UP-TO-DATE
> Task :cacheVersionExecutableServer1.21.1 UP-TO-DATE
> Task :cacheVersionMappingsClient1.21.1 UP-TO-DATE
> Task :cacheVersionMappingsServer1.21.1 UP-TO-DATE
> Task :neoFormListLibraries UP-TO-DATE
> Task :neoFormStripClient UP-TO-DATE
> Task :neoFormExtractServer UP-TO-DATE
> Task :neoFormStripServer UP-TO-DATE
> Task :neoFormMerge UP-TO-DATE
> Task :neoFormMergeMappings UP-TO-DATE
> Task :neoFormRename UP-TO-DATE
> Task :neoFormDecompile UP-TO-DATE
> Task :neoFormApplyForgesAccessTransformer UP-TO-DATE
> Task :neoFormInject UP-TO-DATE
> Task :neoFormPatch UP-TO-DATE
> Task :neoFormPatchUserDev UP-TO-DATE
> Task :neoFormApplyOfficialMappings UP-TO-DATE
> Task :neoFormUnzipSources UP-TO-DATE
> Task :create1.21.1ClientExtraJar UP-TO-DATE
> Task :selectRawArtifactNg_dummy_ng.net.minecraft_client_1.21.1_client-extra UP-TO-DATE
> Task :neoFormRecompile UP-TO-DATE
> Task :neoFormPackRecomp UP-TO-DATE
> Task :supplyRawJarForneoFormJoined1.21.1-20240808.144430 UP-TO-DATE
> Task :selectRawArtifactNg_dummy_ng.net.neoforged_neoforge_21.1.217 UP-TO-DATE

> Task :compileJava
C:\Users\imba\Git\Fairy-Lights\src\main\java\me\paulf\fairylights\server\item\crafting\FLCraftingRecipes.java:172: error: cannot find symbol
    public static CustomRecipe createCopyColorWrapper(CraftingBookCategory category) {
                  ^
  symbol:   class CustomRecipe
  location: class FLCraftingRecipes
C:\Users\imba\Git\Fairy-Lights\src\main\java\me\paulf\fairylights\server\item\crafting\FLCraftingRecipes.java:263: error: cannot find symbol
    public static final DeferredHolder<RecipeSerializer<?>, RecipeSerializer<CustomRecipe>> COPY_COLOR = REG.register(
                                                                             ^
  symbol:   class CustomRecipe
  location: class FLCraftingRecipes
C:\Users\imba\Git\Fairy-Lights\src\main\java\me\paulf\fairylights\data\DataGatherer.java:42: warning: [removal] bus() in EventBusSubscriber has been deprecated and marked for removal
@EventBusSubscriber(modid = FairyLights.ID, bus = EventBusSubscriber.Bus.MOD)
                                            ^
C:\Users\imba\Git\Fairy-Lights\src\main\java\me\paulf\fairylights\data\DataGatherer.java:42: warning: [removal] Bus in EventBusSubscriber has been deprecated and marked for removal
@EventBusSubscriber(modid = FairyLights.ID, bus = EventBusSubscriber.Bus.MOD)
                                                                    ^
Note: C:\Users\imba\Git\Fairy-Lights\src\main\java\me\paulf\fairylights\server\item\ConnectionItem.java uses or overrides a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
2 errors
2 warnings

> Task :compileJava FAILED

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileJava'.
> Compilation failed; see the compiler error output for details.

* Try:
> Run with --info option to get more log output.
> Run with --scan to get full insights.

Deprecated Gradle features were used in this build, making it incompatible with Gradle 9.0.

You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.

For more on this, please refer to https://docs.gradle.org/8.7/userguide/command_line_interface.html#sec:command_line_warnings in the Gradle documentation.

BUILD FAILED in 26s
26 actionable tasks: 1 executed, 25 up-to-date
